--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-graphics:$compose_ui_version"
@@ -69,8 +69,18 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    //coil
+    implementation "io.coil-kt:coil:2.3.0"
+    implementation "io.coil-kt:coil-base:2.3.0"
+    implementation "io.coil-kt:coil-compose:2.3.0"
+    implementation "io.coil-kt:coil-compose-base:2.3.0"
+    implementation "io.coil-kt:coil-gif:2.3.0"
+    implementation "io.coil-kt:coil-svg:2.3.0"
+
     //dagger hilt
     implementation "com.google.dagger:hilt-android:2.45"
+    implementation platform('androidx.compose:compose-bom:2022.10.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     kapt "com.google.dagger:hilt-android-compiler:2.45"
 
     //retrofit
