--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation "androidx.compose.ui:ui:$compose_ui_version"
@@ -76,6 +77,10 @@ dependencies {
     implementation "io.coil-kt:coil-compose-base:2.3.0"
     implementation "io.coil-kt:coil-gif:2.3.0"
     implementation "io.coil-kt:coil-svg:2.3.0"
+
+    //paging
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha20"
 
     //dagger hilt
     implementation "com.google.dagger:hilt-android:2.45"
