Creation and display of the character details view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,12 @@
         android:theme="@style/Theme.MarvelApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.features.characterdetails.ui.CharacterDetailsActivity"
+            android:parentActivityName=".ui.MainActivity"
+            android:label=""
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MarvelApp">
             <intent-filter>
