--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,8 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.5.1'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "io.mockk:mockk:1.13.5"
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
